css/style.css
body {
  background-color: #333;
  font-family: sans-serif;
  font-size: 10px;
}

*, *::before, *::after {
  box-sizing: border-box;
}

nav {
  background-color: #BDBDBD;
  padding-left: 15px;
  position: fixed;
  width: 375px;
  border: 10px;
  height: 45px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  border-bottom: 1px solid rgb(100, 99, 99);
}

.container {
  margin: 0 auto;
  width: 375px;
}

.arrow-left, .menu {
  color: #007AFF;
  font-size: 20px;
  width: 10%;
}

.title {
  color: black;
  font-size: 1.8em;
  width: 70%;
  text-align: center;
}

.menu {
  width: 10%;
  text-align: right;
}

ul.titles {
    font-weight: bold;
    padding-bottom: 5px;
}

ul.content {
    padding-bottom: 10px;
}

/* #target {
  background-color: red;
} */

li {
  display: inline-block;
}

li.line {
    width: 10%;
    text-align: center;
}

li.dest {
    width: 60%;
    text-align: center;
}

li.freq {
    width: 15%;
    text-align: center;
}

li.left {
    width: 10%;
    text-align: center;
}

li.center {
    width: 60%;
    text-align: center;
}

li.right {
    width: 15%;
    text-align: center;
}

.bus-list {
  padding-top: 45px;
  background-color:rgb(214, 214, 214);
}

.location {
  padding: 2.5% 15px;
  border-bottom: 1px solid rgb(100, 99, 99);
  justify-content: space-between;
}

h1 {                       /* direction */
  line-height: 1.5;
  font-size: 1.5em;
  font-weight: bold;
  padding-bottom: 5px;
}

